--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="description" content="Online Terminal(Emulator) tutorial">
   <meta name="keywords" content="HTML,CSS,JavaScript,Jquery">
-  <meta name="author" content="Shubham Rath">
+  <meta name="author" content="Mohamat Riski Fauzi">
   
-  <title>lterm: Online Terminal(Emulator) tutorial</title>
+  <title>lterm: Online Terminal(Emulator)</title>
 
     <link rel="shortcut icon" href="terminal.png"/>
     <script src="js/jquery-1.7.1.min.js"></script>
